--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                 </p>
                 <button>Sign up</button>
             </div>
-            
+            <a href="https://placeholder.com/"><img class="image1" src="https://via.placeholder.com/460x230/"></a>
         </div>
+    </div>
+    <div class="second-part">
+        
     </div>
 </body>
 </html>
