--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
         </div>
     </div>
     <div class="second-part">
-        
+        <div class="second-text">Some random information.</div>
+        <div class="boxes">
+            <div class="item">
+                <div class="box"></div>
+                <div class="text-box">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="item">
+                <div class="box"></div>
+                <div class="text-box">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="item">
+                <div class="box"></div>
+                <div class="text-box">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="item">
+                <div class="box"></div>
+                <div class="text-box">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
