--- a/index.html
+++ b/index.html
@@ -53,5 +53,20 @@
             </div>
         </div>
     </div>
+    <div class="third-part">
+        <div class="third-text">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="thor">-Thor, God of Thunder</p>
+        </div>
+    </div>
+    <div class="fourth-part">
+        <div class="fourth-content">
+            <div class="fourth-text">
+                <div class="fourth-title">Call to action! It's time!</div>
+                <div class="fourth-p">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
