--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
             <button>Sign up</button>
         </div>
     </div>
+    <div class="footer"> 
+        <div class="footer-text">
+            Copyright © The Odin Project 2021
+        </div>
+    </div>
 </body>
 </html>
